--- a/index.html
+++ b/index.html
@@ -4,14 +4,16 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <script src="https://cdn.tailwindcss.com"></script>
-  <link rel="stylesheet" href="./style.css">
-  <title>clickable circles</title>
+  <link rel="stylesheet" href="style.css">
+  <title>Clickable Shapes</title>
 </head>
 
 <body>
   <div class="container">
-
+    <div class="shape shape-1"></div>
+    <div class="shape shape-2"></div>
+    <div class="shape shape-3"></div>
+    <div class="shape shape-4"></div>
   </div>
 </body>
 
