--- a/index.html
+++ b/index.html
@@ -5,15 +5,16 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="style.css">
+  <script src="./script.js" defer></script>
   <title>Clickable Shapes</title>
 </head>
 
 <body>
   <div class="container">
-    <div class="shape shape-1"></div>
-    <div class="shape shape-2"></div>
-    <div class="shape shape-3"></div>
-    <div class="shape shape-4"></div>
+    <div class="shape shape-1" id="shape-1"></div>
+    <div class="shape shape-2" id="shape-2"></div>
+    <div class="shape shape-3" id="shape-3"></div>
+    <div class="shape shape-4" id="shape-4"></div>
   </div>
 </body>
 
